--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
                 "type": "Social",
                 "altText": "instagram",
                 "label": "instagram",
-                "url": "https://twitter.com/netlify",
+                "url": "",
                 "icon": "twitter"
             },
             {
