config.json: updated url in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
                 "type": "Social",
                 "altText": "instagram",
                 "label": "instagram",
-                "url": "",
+                "url": "https://www.instagram.com/mambo_visuals/",
                 "icon": "twitter"
             },
             {
