config.json: updated icon in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,7 +30,7 @@
                 "altText": "instagram",
                 "label": "instagram",
                 "url": "https://www.instagram.com/mambo_visuals/",
-                "icon": "twitter"
+                "icon": "instagram"
             },
             {
                 "type": "Social",
