--- a/content/data/config.json
+++ b/content/data/config.json
@@ -74,7 +74,7 @@
             "title": "Contact details",
             "phoneNumber": "+36307734899",
             "phoneAltText": "My phone number",
-            "email": "thisismyemail.@myemail.me",
+            "email": "nicksonmambo03@gmail.com",
             "emailAltText": "My email",
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
             "addressAltText": "My address"
