--- a/content/data/config.json
+++ b/content/data/config.json
@@ -77,7 +77,7 @@
             "email": "nicksonmambo03@gmail.com",
             "emailAltText": "My email",
             "address": "",
-            "addressAltText": "My address"
+            "addressAltText": ""
         },
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
         "styles": {
