--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
             {
                 "type": "Link",
                 "label": "Info",
-                "url": "/info",
+                "url": "/i",
                 "altText": ""
             },
             {
