--- a/content/data/config.json
+++ b/content/data/config.json
@@ -58,7 +58,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
+                "label": "instagram page",
                 "url": "/i",
                 "altText": ""
             },
