config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
             {
                 "type": "Link",
                 "label": "instagram page",
-                "url": "",
+                "url": "https://www.instagram.com/mambo_visuals/",
                 "altText": ""
             },
             {
