config.json: updated favicon

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,6 +1,6 @@
 {
     "type": "Config",
-    "favicon": "/images/favicon.svg",
+    "favicon": "/images/BDIY4361[1].PNG",
     "header": {
         "type": "Header",
         "headerVariant": "variant-c",
