config.json: updated showIcon in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,8 @@
                 "type": "Link",
                 "label": "Contact",
                 "url": "nicksonmambo03@gmail.com",
-                "altText": ""
+                "altText": "",
+                "showIcon": false
             }
         ],
         "contacts": {
