config.json: updated showIcon in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,7 +62,7 @@
                 "label": "Contact",
                 "url": "nicksonmambo03@gmail.com",
                 "altText": "",
-                "showIcon": false
+                "showIcon": true
             }
         ],
         "contacts": {
