config.json: updated icon in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,7 +62,8 @@
                 "label": "Contact",
                 "url": "nicksonmambo03@gmail.com",
                 "altText": "",
-                "showIcon": true
+                "showIcon": true,
+                "icon": "mail"
             }
         ],
         "contacts": {
