--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,11 +10,6 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
-                "url": "/info"
-            },
-            {
-                "type": "Link",
                 "label": "Projects",
                 "url": "/projects"
             }
@@ -61,7 +56,9 @@
                 "type": "Link",
                 "label": "Contact",
                 "url": "nicksonmambo03@gmail.com",
-                "altText": ""
+                "altText": "",
+                "showIcon": true,
+                "icon": "mail"
             }
         ],
         "contacts": {
