config.json: updated showIcon in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,7 +50,8 @@
                 "type": "Link",
                 "label": "instagram page",
                 "url": "https://www.instagram.com/mambo_visuals/",
-                "altText": ""
+                "altText": "",
+                "showIcon": true
             },
             {
                 "type": "Link",
