--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,8 @@
                 "url": "https://www.instagram.com/mambo_visuals/",
                 "altText": "",
                 "showIcon": true,
-                "icon": "instagram"
+                "icon": "instagram",
+                "iconPosition": "left"
             },
             {
                 "type": "Link",
