--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
                 "altText": "GitHub",
                 "label": "GitHub",
                 "url": "https://github.com/netlify-templates",
-                "icon": "github"
+                "icon": "youtube"
             }
         ],
         "styles": {
