config.json: updated label in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,7 @@
             {
                 "type": "Social",
                 "altText": "GitHub",
-                "label": "GitHub",
+                "label": "Youtube",
                 "url": "https://www.youtube.com/@KINGMAMBO1",
                 "icon": "youtube"
             }
