config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,7 +24,7 @@
             },
             {
                 "type": "Social",
-                "altText": "GitHub",
+                "altText": "Youtube",
                 "label": "Youtube",
                 "url": "https://www.youtube.com/@KINGMAMBO1",
                 "icon": "youtube"
